<resources>
    <string name="app_name">DnDAttributeDice</string>
    <string name="action_settings">Settings</string>
    <string name="RollOneDice">Roll</string>
    <string name="ScoreOneDice">Score</string>
    <string name="DiceOneDice">Dice</string>
    <string name="RollAll">Roll All</string>
    <string name="dice_1">Dice 1</string>
    <string name="dice_2">Dice 2</string>
    <string name="dice_3">Dice 3</string>
    <string name="dice_4">Dice 4</string>
    <string name="dice_5">Dice 5</string>
    <string name="dice_6">Dice 6</string>
    <string name="dice_7">Dice 7</string>
    <string name="ShowAttributes">Show Attributes</string>
    <string name="title_activity_show_attributes">ShowAttributes</string>
</resources>
