<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.sdonath.dndattributedice.AttributeDice"
    tools:showIn="@layout/activity_attribute_dice"
    tools:layout_editor_absoluteY="81dp"
    tools:layout_editor_absoluteX="0dp">

    <TableLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintBottom_creator="1"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="35dp"
        tools:layout_constraintLeft_creator="1"
        android:layout_marginBottom="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:id="@+id/tableLayout">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:weightSum="1">

                <TextView
                    android:id="@+id/textViewDiceOneDice"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/DiceOneDice"/>

                <TextView
                    android:id="@+id/textViewScore"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="190dp"
                    android:layout_marginRight="20dp"
                    android:layout_weight="0.17"
                    android:text="@string/ScoreOneDice"/>

                <TextView
                    android:id="@+id/textViewRoll"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/RollOneDice"/>
            </LinearLayout>

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="TextView"/>

                <Button
                    android:id="@+id/buttonDice1"
                    android:tag="1"
                    android:onClick="rollDice"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="150dp"
                    android:layout_weight="1"
                    android:text="@string/dice_1"/>

                <TextView
                    android:id="@+id/textViewRollDice1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/RollOneDice"/>
            </LinearLayout>

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="TextView"/>

                <Button
                    android:id="@+id/buttonDice2"
                    android:tag="2"
                    android:onClick="rollDice"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="150dp"
                    android:text="@string/dice_2"/>

                <TextView
                    android:id="@+id/textViewRollDice2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/RollOneDice"/>

            </LinearLayout>
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="TextView"/>

                <Button
                    android:id="@+id/buttonDice3"
                    android:tag="3"
                    android:onClick="rollDice"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="150dp"
                    android:layout_weight="1"
                    android:text="@string/dice_3"/>

                <TextView
                    android:id="@+id/textViewRollDice3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/RollOneDice"/>
            </LinearLayout>
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="TextView"/>

                <Button
                    android:id="@+id/buttonDice4"
                    android:tag="4"
                    android:onClick="rollDice"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="150dp"
                    android:layout_weight="1"
                    android:text="@string/dice_4"/>

                <TextView
                    android:id="@+id/textViewRollDice4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/RollOneDice"/>
            </LinearLayout>
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="TextView"/>

                <Button
                    android:id="@+id/buttonDice5"
                    android:tag="5"
                    android:onClick="rollDice"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="150dp"
                    android:layout_weight="1"
                    android:text="@string/dice_5"/>

                <TextView
                    android:id="@+id/textViewRollDice5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/RollOneDice"/>
            </LinearLayout>
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView6"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="TextView"/>

                <Button
                    android:id="@+id/buttonDice6"
                    android:tag="6"
                    android:onClick="rollDice"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="150dp"
                    android:layout_weight="1"
                    android:text="@string/dice_6"/>

                <TextView
                    android:id="@+id/textViewRollDice6"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/RollOneDice"/>
            </LinearLayout>
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView7"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="TextView"/>

                <Button
                    android:id="@+id/buttonDice7"
                    android:tag="7"
                    android:onClick="rollDice"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="150dp"
                    android:layout_weight="1"
                    android:text="@string/dice_7"/>

                <TextView
                    android:id="@+id/textViewRollDice7"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/RollOneDice"/>
            </LinearLayout>
        </TableRow>
    </TableLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:id="@+id/linearLayout"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintBottom_creator="1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="@+id/tableLayout"
        tools:layout_constraintLeft_creator="1"
        android:layout_marginBottom="39dp"
        app:layout_constraintLeft_toLeftOf="@+id/tableLayout">

        <Button
            android:id="@+id/buttonRollAllDice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="rollAllDice"
            android:text="@string/RollAll"
            tools:layout_editor_absoluteX="67dp"
            tools:layout_editor_absoluteY="407dp"/>

        <Button
            android:id="@+id/buttonSeeAttributes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="SeeAttributes"
            android:text="@string/SeeAttributes"
            tools:layout_editor_absoluteX="199dp"
            tools:layout_editor_absoluteY="407dp"/>
    </LinearLayout>

</android.support.constraint.ConstraintLayout>
